=head1 Krang Changelog

This document contains a list of changes for each release of Krang.



=head2 3.02 - IN DEVELOPMENT

=over

=item *

Fixed bug #32 along with a related bug in
C<Krang::Publisher->unpublish_story()> where after deleting a story
its preview path would not be deleted even if it is empty. [Bodo
Schulze]

=item *

Fixed long standing bug where Edit button is present when viewing an
old Story version. [Bodo Schulze]

=back



=head2 3.011 - March 20, 2008

=over

=item *

Added --maintain-versions mode (and associated tests) to publisher
to rewrite existing versions of live stories to site. [Noam Weinstein]

=back


=head2 3.01 - February 1, 2008

=over

=item *

Fixed a bug in both JavaScript and PERL where some cookies were being written
to root path and others to active path. [Noam Weinstein]

=item *

Added an optimization for Krang admin scripts that know they won't use any
elements. This dramatically speeds up those admin scripts on systems with multiple
element libraries. [Michael Peters]

=item *

Added interactive C<krang_to_utf8> script to ease conversions. [Noam Weinstein]

=item * 

Added C<PreloadHandler> available to addons to run code during Apache's
preload stage. [Michael Peters]

=item *

Added C<EnableTemplateCache> configuration parameter to be able to turn Krang
UI template caching on. [Michael Peters]

=item *

Added the ability to limit the number of versions saved in the database
for each Story, Media, and/or Template object, automatically pruning
the oldest ones. [Noam Weinstein]

=item *

In Krang::ElementClass::XinhaEditor fixed caching of
htmlarea.js. [Bodo Schulze]

=item *

When a user has read-only access to stories, media, and/or templates, made
buttons like Publish, Add, Checkin, etc. hidden from view. [Noam Weinstein]

=item *

When editing media, made Save and Save_and_Stay buttons automatically
publish to preview. [Noam Weinstein]

=item *

Added a new script F<bin/krang_exec> to make it really simple to run