@@ -39,21 +39,26 @@ View Site
 <tbody>
 
 <tr>
+<td class="f">ID</td>
+<td class="l"><tmpl_var escape=html site_id></td>
+</tr>
+
+<tr class="even">
 <td class="f">URL</td>
 <td class="l"><tmpl_var escape=html url></td>
 </tr>
 
-<tr class="even">
+<tr>
 <td class="f">Preview URL</td>
 <td class="l"><tmpl_var escape=html preview_url></td>
 </tr>
 
-<tr>
+<tr class="even">
 <td class="f">Publish Path</td>
 <td class="l"><tmpl_var escape=html publish_path></td>
 </tr>
 
-<tr class="even">
+<tr>
 <td class="f">Preview Path</td>
 <td class="l"><tmpl_var escape=html preview_path></td>
 </tr>
