@@ -8,6 +8,11 @@ This document contains a list of changes for each release of Krang.
 
 =over
 
+=item * 
+
+Added display of IDs to Site & Category's Find screens, and 
+to Site's Edit & View screens. [Noam Weinstein]
+
 =item *
 
 Fixed bug #32 along with a related bug in
